--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -1,7 +1,9 @@
-version: 2.1
+version: 2
 jobs:
  build:
   docker:
    - image: cimg/node:lts
   steps:
-   - run: echo "hello world"
+   - checkout
+   - run: yarn install
+   - run: yarn test
