--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -4,6 +4,11 @@ jobs:
   docker:
    - image: cimg/node:lts
   steps:
-   - checkout
-   - run: yarn install
-   - run: yarn test
+   - run:
+      name: ステップで定義された環境変数を利用する
+      environment:
+       NODE_ENV: production
+      command: echo "NODE_ENV is '$NODE_ENV'"
+   - run:
+      name: 環境変数は引き継がれない
+      command: echo "NODE_ENV is '$NODE_ENV'"
