--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -1,16 +1,27 @@
-version: 2
+version: 2.1
 jobs:
- build:
+ envvar_test:
   docker:
    - image: cimg/node:lts
-  environment:
-   NODE_ENV: production
   steps:
    - run:
-      name: ジョブで定義された環境変数を利用する
-      command: echo "NODE_ENV is '$NODE_ENV'"
-   - run:
-      name: ステップで同名の環境変数を定義すると上書きされる
+      name: ステップ定義の環境変数を定義する
       environment:
-       NODE_ENV: test
-      command: echo "NODE_ENV is '$NODE_ENV'"
+       STEP_VARIABLE: "This is step variable"
+      command: echo $STEP_VARIABLE
+   - run:
+      name: プロジェクト設定の環境変数を出力する
+      command: echo $PROJECT_CARIABLE
+   - run:
+      name: コンテキストの環境変数を出力する
+      command: echo $CONTEXT_VARIABLE
+   - run:
+      name: Base64で符号化されたプロジェクト設定の環境変数を出力する
+      command: echo $BASE64_PROJECT_VARIABLE | base54 --decode
+
+workflows:
+ version: 2
+ main:
+  jobs:
+   - envvar_test:
+      context: EXAMPLE_CONTEXT
