--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -1,19 +1,45 @@
-version: 2.1
-orbs:
-   pr-comment: benjlevesque/pr-comment@0.1.4
-jobs:
-   pull_request_comment_test:
+# 複数のジョブで再利用可能な実行環境を定義
+executors:
+   # デフォルトのDockerイメージ
+   default:
       docker:
          - image: cimg/node:lts
+      working_directory: ~/repo
+
+version: 2.1
+jobs:
+   # 依存パッケージのインストールを行い、実行環境を構築するジョブ
+   setup:
+      executor: default
       steps:
          - checkout
-         - pr-comment/pr-comment:
-            comment: |
-               GitHubプルリクエストにコメント
-               ${CIRCLE_BUILD_URL}
-            maxComments: 10
+         - run:
+            name: Nodeモジュールのインストール
+            command: yarn install
+         # node_modules を永続化
+         - persist_to_workspace:
+            root: ~/repo
+            paths:
+               - node_modules
+   # テスト実行ジョブ
+   test_jest:
+      executor: default
+      steps:
+         - checkout
+         # node_modules をダウンロード
+         - attach_workspace:
+            at: .
+         # オプションを指定してテストコマンドを実行
+         - run:
+            name: Jest を実行
+            command: npx jest --ci --maxWorkers=2
+
 workflows:
    version: 2
-   main:
+   build_test:
       jobs:
-         - pull_request_comment_test
+         - setup
+         - test_jest:
+            # setup の後に test_jest を実行
+            requires:
+               - setup
