--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -29,11 +29,16 @@ jobs:
          # node_modules をダウンロード
          - attach_workspace:
             at: .
-         # オプションを指定してテストコマンドを実行
+         - run:
+            name: jest-junitパッケージを追加
+            command: yarn add --dev jest-junit
          - run:
             name: Jest を実行
-            command: npx jest --ci --maxWorkers=2
-
+            command: |
+               npx jest --ci --maxWorkers=2 \
+               --reporters=default --reporters=jest-junit
+            environment: # テストレポートの出力先を指定
+               JEST_JUNIT_OUTPUT_DIR: "reports/jest"
 workflows:
    version: 2
    build_test:
